Fixed UI issues for smaller screens

--- a/styles/chatStyles.scss
+++ b/styles/chatStyles.scss
@@ -68,7 +68,7 @@ body {
   background-color: $chat-thread-bgd-color;
 }
 
-.chat-thread div {
+.chat-thread li {
   position: relative;
   clear: both;
   display: inline-block;
