Implemented UI for Welcome Page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -69,8 +69,80 @@ body,
 }
 
 .no-zoom {
-  font-size: 16px; /* Set your desired font size */
-  max-height: 100px; /* Adjust the max-height as needed */
-  max-width: 100%; /* Ensure the input doesn't exceed the screen width */
-  overflow: auto; /* Allow scrolling if the content exceeds the input's dimensions */
+  font-size: 16px;
+  max-height: 100px;
+  max-width: 100%;
+  overflow: auto;
 }
+
+.element {
+  animation: cssAnimation_0 1351ms infinite ease;
+}
+
+@keyframes cssAnimation_0 {
+  from {
+    border: 0px solid rgba(100, 100, 100, 1); border-radius: 4px;
+  }
+
+  to {
+    border: 7px hidden rgba(99, 99, 99, 1);
+    border-radius: 4px;
+  }
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap");
+
+svg {
+	font-family: "Mochiy Pop One", sans-serif;
+	width: 100%; height: 100%;
+}
+svg text {
+	animation: stroke 6s infinite alternate;
+	stroke-width: 2vw;
+	stroke: #3160A0;
+	font-size: 12vw;
+  text-anchor: middle;
+}
+
+@keyframes stroke {
+	0%   {
+		fill: rgba(78,172,204,0); stroke: rgba(49,96,160,1);
+		stroke-dashoffset: 25%; stroke-dasharray: 0 50%; stroke-width: 2;
+	}
+	70%  {fill: rgba(78,172,204,0); stroke: rgba(49,96,160,1); }
+	80%  {fill: rgba(78,172,204,0); stroke: rgba(49,96,160,1); stroke-width: 3; }
+	100% {
+		fill: rgba(78,172,204,1); stroke: rgba(49,96,160,0);
+		stroke-dashoffset: -25%; stroke-dasharray: 50% 0; stroke-width: 0;
+	}
+}
+
+.button {
+  background-color: #008CBA;
+  border: none;
+  color: rgb(0, 0, 0);
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition: transform 0.4s, box-shadow 0.4s;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.button2 {
+  background-color: rgb(0, 0, 0);
+  color: #ffffffcb;
+  border: 2px solid #008CBA;
+}
+
+.button2:hover {
+  background-color: #009ed2;
+  color: white;
+  transform: scale(1.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+
